# Embedded_Project

./: AUTHORS  INSTALL  INSTALL.md  Makefile.am  bootstrap.sh  configure.ac
common/: Makefile  Makefile.in  file_ops.c  file_ops.h  file_ops.lo  libcommon.la  list.h
common/.deps/: file_ops.Plo
random_data/34/: 1  2  3
scripts/: Makefile  Makefile.in
src/: Makefile.am  bacnet_client.c  bacnet_server.c  bridge.c  list.h  modbus_client.c
src/random_data/34/: 0
